2005-01-10  DindinX  <dindinx@gimp.org>

	* plug-ins/common/sparkle.c: update the preview when a parameter
	change.  Updating the preview is now disabled by default since it can
	be very slow.

2005-01-09  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpgradientmenu.c: fixed out-of-bounds access in
	gradient selection widget. Presumably fixes bug #163427.

2005-01-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollerkeyboard.c: changed "Key" to "Cursor".

2005-01-09  DindinX  <dindinx@gimp.org>

	* plug-ins/common/sparkle.c: added a preview. This will need more
	testing.  Shlomi Fish, can you please try to test this plug-in again?

2005-01-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactionview.c (gimp_action_view_new): connect to
	"button_press_event" and start editing immidiately instead of
	waiting for a second click. Fixes bug #163385.

2005-01-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdialogfactory.c (gimp_dialog_factories_toggle):
	if called with (ensure_visibility == TRUE), raise the toolbox.
	Fixes bug #163381.

2005-01-08  DindinX  <dindinx@gimp.org>

	* plug-ins/common/mosaic.c: made the preview fast enough to be useful.

2005-01-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_button_press): fixed handling of clicks
	into a horizontally scrolled treeview.

	(gimp_container_tree_view_find_click_cell): really fix handling of
	RTL layouts (bug #162663).

2005-01-08  Sven Neumann  <sven@gimp.org>

	* app/dialogs/scale-dialog.c: use a GimpMessageBox to display the
	informative message when scaling an indexed image.

2005-01-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_button_press): handle RTL layouts (fixes
	bug #162663).

2005-01-07  Shlomi Fish  <shlomif@iglu.org.il>

	* plug-ins/script-fu/scripts/frosty-logo.scm: made sure the shadow
	is given enough space and then truncated instead of translated to